# dashscan

./: .gitignore  README.md
api/: .env  Dockerfile  (+3 more)
indexer/: .env  Cargo.toml  Dockerfile
indexer/migrations/: V0__blocks.sql  V10__disable_synchronous_commit.sql  V10__optional_block_height_transactions.sql  V11__tx_lock_fields.sql  V12__super_block.sql  V12__superblock.sql  V13__block_miner_info.sql  V14__replace_prev_tx_hash_with_prev_tx_id.sql  V15__add_inputs_outputs_indexes.sql  V16__add_tx_outputs_address_id_index.sql  V17__add_superblock_index.sql  V18__expand_transactions_fields.sql  V19__utxo_table.sql  V1__transactions.sql  V20__add_transaction_indexes.sql  V20__transaction_multisig.sql  V21__address_balances_matview.sql  V22__add_masternodes_indexes.sql  V23__add_active_addresses_covering_indexes.sql  V23__proposals_table.sql  V24__address_activity.sql  V25__address_activity_weekly.sql  V26__address_transactions.sql  V2__addresses.sql  V3__tx_inputs_outputs.sql  V4__special_transactions.sql  V5__masternodes.sql  V6__cbtx_fields.sql  V7__add_address_last_seen_block_index.sql  V7__transactions_block_height.sql  V8__drop_redundant_indexes.sql  V8__indexer_performance_indexes.sql  V9__addresses_fillfactor.sql
indexer/src/: config.rs  crawler.rs  dao.rs  db.rs  main.rs  miner_pool.rs  p2p.rs  p2p_converter.rs  peers.rs  pools.json  processor.rs  rpc.rs  schema.sql  zmq.rs
indexer/src/db/: address_activity.rs  address_transactions.rs  addresses.rs  blocks.rs  governance.rs  inputs.rs  masternodes.rs  mod.rs  outputs.rs  transactions.rs  utxo.rs
indexer/src/enums/: transaction_type.rs
indexer/src/errors/: block_index_error.rs  database_error.rs  mod.rs  p2p_error.rs  redis_error.rs  rpc_error.rs  unexpected_error.rs
indexer/src/processor/: address_resolver.rs  batch_cache.rs  block_writer.rs  catch_up.rs  governance.rs  miner.rs  mod.rs  utxo_cache.rs
indexer/src/utils/: mod.rs  script.rs  transaction.rs
indexer/src/utils/transaction/: calculate_amount.rs  check_coinjoin.rs  get_coinbase_tx_info.rs  mod.rs
(+284 files in other folders)
