[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
tokio-postgres = { version="0.7.10", features=["with-chrono-0_4", "with-serde_json-1" ] }
dotenv = "0.15.0"
deadpool-postgres = "0.10.5"
refinery = { version = "0.9.0", features = ["tokio-postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
zeromq = "0.4"
chrono = "0.4.44"
