[package]
name = "indexer"
version = "0.1.2"
edition = "2024"

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
clickhouse = { version = "0.13", features = ["inserter"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
dashcore = {git="https://github.com/dashpay/rust-dashcore", features = ["core-block-hash-use-x11", "rand"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
zeromq = "0.4"
chrono = "0.4.44"
futures = "0.3"